# hsmagick

./: .gitignore  FFIHelpers_in.hs  Images.hs  README  README.md  Types.hs  build.sh  hsmagick.cabal  run.sh  test.sh  test_in.hs  tjc-notes
Graphics/Transform/: Errors.hs  Images_in.hs  Magick.hs  Types_in.hs
Graphics/Transform/Magick/: Errors.hs  FFIHelpers.hsc  FFIHelpers_in.hs  Images.hsc  Images_in.hs  Magick.hs  Test.hs  Test.hsc  Types.hs  Util.hs
