name:                hsmagick
version:             0.1
synopsis:            FFI bindings for the GraphicsMagick library
description:         FFI bindings for the GraphicsMagick library
category:            Graphics
license:             BSD3
license-file:        LICENSE
author:              Tim Chevalier
maintainer:          chevalier@alum.wellesley.edu
copyright:           (c) Tim Chevalier, 2008
build-Depends:       base
ghc-options:         
tested-with:         GHC ==6.8.2
